2do comit-antes footer

--- a/src/app/components/acercade/acercade.component.html
+++ b/src/app/components/acercade/acercade.component.html
@@ -1,1 +1,18 @@
-<p>acercade works!</p>
+<div class="row">
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+        <!--
+            <img src="../../../assets/foto-cara-2.jpg"
+            class="img-fluid" id="foto">
+        -->
+    </div>
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+        <p id="nombre">Sandra Beatriz André</p>
+        <p>Web Developer Junior</p>
+    </div>
+    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+        <span>
+            <p>Acerca de mí</p>
+            <p>Abogada y con ganas de aprender a programar aplicaciones web</p>
+        </span>    
+    </div>
+</div>
