--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div>
   <app-header></app-header>
-  <app-banner></app-banner>
+  <app-acercade></app-acercade>
+  <app-experiencia></app-experiencia>
+  <app-educacion></app-educacion>
+  <app-skills></app-skills>
+  <app-proyectos></app-proyectos>
 </div>
