--- a/FrontEnd/src/app/components/educacion/educacion.component.html
+++ b/FrontEnd/src/app/components/educacion/educacion.component.html
@@ -1,3 +1,19 @@
+<div class="card mat-card">
+    <div class="card-titles">
+      <h2>Educación</h2>
+      <div id="info-data">
+        <ul id="info-details">
+          <li *ngFor="let educaciones of educacionLista">
+            <a href="#">
+            <img [src]='educaciones.imagen'>
+            <h2>{{educaciones.colegio}}</h2>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>			
+</div>
+
 <div class="row">
     <h1>Educación</h1>
     <div class="col-lg-1"></div>
