--- a/FrontEnd/src/app/components/proyectos/proyectos.component.html
+++ b/FrontEnd/src/app/components/proyectos/proyectos.component.html
@@ -1,1 +1,12 @@
-<p>proyectos works!</p>
+<div class="row">
+    <h1>Proyectos</h1>
+    <div class="contenedor">
+        <div>
+            <h1>Página La Salle</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque molestias provident illum sed unde corrupti necessitatibus. Sint assumenda velit molestiae ipsam pariatur rem, porro commodi quia, suscipit explicabo doloribus odit!</p>
+        </div>
+        <div>
+            <img src="../../../assets/lasalle.jpg">
+        </div>
+    </div>
+</div>
