--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,7 +1,10 @@
-<app-header></app-header>
-<app-acercade></app-acercade>
-<app-experiencia></app-experiencia>
-<app-educacion></app-educacion>
-<app-skills></app-skills>
-<app-proyectos></app-proyectos>
-<app-footer></app-footer>
+<div class="container">
+    <app-header></app-header>
+    <app-acercade></app-acercade>
+    <app-experiencia></app-experiencia>
+    <app-educacion></app-educacion>
+    <app-skills></app-skills>
+    <app-proyectos></app-proyectos>
+    <app-footer></app-footer>
+</div>
+
