--- a/FrontEnd/src/app/components/acercade/acercade.component.css
+++ b/FrontEnd/src/app/components/acercade/acercade.component.css
@@ -2,7 +2,7 @@
     padding: 20px;
 }
 div {
-    background-color: royalblue;
+    background-color: gray;
     text-align: center;
 }
 @media (min-width: 576px){
