--- a/FrontEnd/src/app/components/acercade/acercade.component.html
+++ b/FrontEnd/src/app/components/acercade/acercade.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div >
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <!--
             <img src="../../../assets/foto-cara-2.jpg"
