--- a/FrontEnd/src/app/components/educacion/educacion.component.html
+++ b/FrontEnd/src/app/components/educacion/educacion.component.html
@@ -16,7 +16,7 @@
 </div>
 -->
 
-<div class="row">
+<div class="mat-card">
   <h1>Educación</h1>
   <div id="info-data">
     <ul id="info-details">
