--- a/FrontEnd/src/app/components/proyectos/proyectos.component.css
+++ b/FrontEnd/src/app/components/proyectos/proyectos.component.css
@@ -3,9 +3,20 @@
 }
 
 div {
-    background-color: royalblue;
+    /*background: royalblue; */
+    background: #5f2c82;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #49a09d, #5f2c82);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #49a09d, #5f2c82); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 h1, h3 {
     display: inline;
+}
+
+/* contenedores redondeados */
+.mat-card {
+	border-radius: 32px;
+	margin: 10px 10px;
+	padding: 20px;
+	border-color: black;
 }
