--- a/FrontEnd/src/app/components/skills/skills.component.css
+++ b/FrontEnd/src/app/components/skills/skills.component.css
@@ -7,3 +7,11 @@ div {
 h1, h3 {
     display: inline;
 }
+
+/* contenedores redondeados */
+.mat-card {
+	border-radius: 32px;
+	margin: 10px 10px;
+	padding: 20px;
+	border-color: black;
+}
