--- a/FrontEnd/src/app/components/skills/skills.component.html
+++ b/FrontEnd/src/app/components/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="mat-card">
     <h1>Hard & Soft Skills</h1>
     <div class="text-center col-sm-4 col-md-4 col-lg-4 col-xs-4">
         <circle-progress
