--- a/FrontEnd/src/app/components/skills/skills.component.css
+++ b/FrontEnd/src/app/components/skills/skills.component.css
@@ -1,7 +1,9 @@
 .row {
-    padding: 20px;
+	padding: 20px;
 }
 div {
+	display: flex;
+	justify-content: center;
     background: seagreen;
 }
 h1, h3 {
