--- a/FrontEnd/src/app/components/skills/skills.component.html
+++ b/FrontEnd/src/app/components/skills/skills.component.html
@@ -1,5 +1,6 @@
 <div class="mat-card">
-    <h1>Hard & Soft Skills</h1>
+    <div class="row">
+    <h1>Hard & Soft Skills</h1><br>
     <div class="text-center col-sm-4 col-md-4 col-lg-4 col-xs-4">
         <circle-progress
         [percent]="80"
@@ -46,6 +47,7 @@
         [animation]="true"
         [animationDuration]="300"
         ></circle-progress>    </div>
+    </div>
 </div>
 
 
